Get tests working with TestServer
